--- a/Web/pages/admin/web_manage.html
+++ b/Web/pages/admin/web_manage.html
@@ -1,5 +1,19 @@
 <link rel="stylesheet" href="../../css/web_manage.css">
 
+<div class="panel panel-default bottomConfig">
+    <div class="panel-heading">
+        底部配置
+    </div>
+    <div class="panel-body">
+        <div class="input-group">
+            <span class="input-group-addon">网站备案号</span>
+            <input type="text" class="form-control">
+        </div>
+
+        <button type="button" class="btn btn-primary saveBtn">保存配置</button>
+    </div>
+</div>
+
 <div class="friendChain">
     <p style="font-size: 18px; font-weight: 600;">编辑添加友链</p>
     <div class="items">
