--- a/Web/pages/admin/index.html
+++ b/Web/pages/admin/index.html
@@ -1,3 +1,4 @@
+#Don't Preload
 <!DOCTYPE html>
 <html lang="zh">
 <head>
@@ -27,8 +28,8 @@
             QQ登录
         </a>
     </div>
-    <script src="../../js/config.js"></script>
     <script src="../../js/lib/jquery-3.6.0.min.js"></script>
+    <script src="../../js/config.js"></script>
     <script src="../../js/login.js"></script>
 
 	<script>
