--- a/Web/pages/post.html
+++ b/Web/pages/post.html
@@ -29,7 +29,17 @@
 
         <div class="posts_header">
             <div class="title"></div>
-            <p class="date"></p>
+            <div class="group_item">
+                <div class="item">
+                    <img src="../images/date.svg" height="15px" alt="date" draggable="false">
+                    <p class="date">-</p>
+                </div>
+                <div class="item">
+                    <img src="../images/eye.svg" height="15px" alt="eye" draggable="false">
+                    <p class="read_count">-</p>
+                </div>
+            </div>
+            
         </div>
 
         <div class="content">
