--- a/Web/pages/label.html
+++ b/Web/pages/label.html
@@ -31,8 +31,8 @@
     </div>
 
     <div class="footer">
-        &lt;/&gt; Copyright &copy; Kuoer's Blog (<a data-toggle="tooltip" title="有问题联系 1275886165@qq.com" style="display: inline; color: black;" href="./admin/index.html">KUOER.TOP</a>) 2022 - 2023
-        <a href="https://beian.miit.gov.cn/">粤ICP备2022013504号</a>
+        &lt;/&gt; Copyright &copy; Kuoer's Blog (<a data-toggle="tooltip" title="有问题联系 1275886165@qq.com" style="display: inline; color: black;" href="./admin/index.html">KUOER.TOP</a>) <span id="createTime"></span>
+        <a id="filing" href="https://beian.miit.gov.cn/"></a>
     </div>
     
     <script src="../js/lib/jquery-3.6.0.min.js"></script>
