--- a/Web/index.html
+++ b/Web/index.html
@@ -38,18 +38,8 @@
     
     <script src="./js/lib/jquery-3.6.0.min.js"></script>
     <script src="./js/lib/bootstrap.js"></script>
-    <script src="../js/config.js"></script>
+    <script src="./js/config.js"></script>
     <script src="./js/index.js"></script>
-	
-	<script>
-		var _hmt = _hmt || [];
-		(function() {
-			var hm = document.createElement("script");
-			hm.src = "https://hm.baidu.com/hm.js?c2f8b1633781ce4b08b386e0f7d8103e";
-			var s = document.getElementsByTagName("script")[0]; 
-			s.parentNode.insertBefore(hm, s);
-		})();
-	</script>
     
 </body>
 </html>
