--- a/Web/pages/admin/manage.html
+++ b/Web/pages/admin/manage.html
@@ -1,4 +1,3 @@
-#Don't Preload
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,7 +15,6 @@
         <div class="title">
             Kuoer's Blog 管理后台
             <a href="javascript:cancel()" style="float: right; font-size: 16px">注销</a>
-            <a href="javascript:bindQQ()" style="margin-right: 10px; float: right; font-size: 16px">绑定QQ登录</a>
         </div>
         <div class="header">
             <div class="item homeBtn">首页</div>
@@ -24,6 +22,7 @@
             <div class="item postsBtn">帖子管理</div>
             <div class="item pushBtn">发布新帖</div>
             <div class="item webManageBtn">网站管理</div>
+            <div class="item pluginManageBtn">插件管理</div>
         </div>
         <div class="content">
             <!-- 这里显示内容 -->
