管理后台一些细节更新

--- a/Web/pages/admin/manage.html
+++ b/Web/pages/admin/manage.html
@@ -18,11 +18,11 @@
         </div>
         <div class="header">
             <div class="item homeBtn">首页</div>
-            <div class="item personnelBtn active">人员管理</div>
-            <div class="item postsBtn">帖子管理</div>
-            <div class="item pushBtn">发布新帖</div>
-            <div class="item webManageBtn">网站管理</div>
-            <div class="item pluginManageBtn">插件管理</div>
+            <div class="item personnelBtn active" item="personnel">人员管理</div>
+            <div class="item postsBtn" item="posts_manage">帖子管理</div>
+            <div class="item pushBtn" item="send_posts">发布新帖</div>
+            <div class="item webManageBtn" item="web_manage">网站管理</div>
+            <div class="item pluginManageBtn" item="plugin_manage">插件管理</div>
         </div>
         <div class="content">
             <!-- 这里显示内容 -->
