--- a/Web/pages/admin/edit_posts.html
+++ b/Web/pages/admin/edit_posts.html
@@ -23,6 +23,7 @@
 <script src="../../js/lib/marked.min.js"></script>
 <script src="../../js/lib/highlight.min.js"></script>
 <script src="../../js/lib/vditor/index.min.js"></script>
+<script src="../../js/lib/vditor/zh_CN.js"></script>
 <script src="../../js/edit_posts.js"></script>
 
 <!-- <script>
