--- a/Web/pages/admin/manage.html
+++ b/Web/pages/admin/manage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,11 +18,13 @@
         </div>
         <div class="header">
             <div class="item homeBtn">首页</div>
-            <div class="item personnelBtn active" item="personnel">人员管理</div>
-            <div class="item postsBtn" item="posts_manage">帖子管理</div>
-            <div class="item pushBtn" item="send_posts">发布新帖</div>
-            <div class="item webManageBtn" item="web_manage">网站管理</div>
-            <div class="item pluginManageBtn" item="plugin_manage">插件管理</div>
+            <div class="item userInfoBtn active" item="user_info">个人信息</div>
+            <div class="item personnelBtn" item="personnel" permission="admin:personnel_btn">人员管理</div>
+            <div class="item permissionBtn" item="permission">权限管理</div>
+            <div class="item postsBtn" item="posts_manage" permission="admin:posts_btn">帖子管理</div>
+            <div class="item pushBtn" item="send_posts" permission="admin:push_btn">发布新帖</div>
+            <div class="item webManageBtn" item="web_manage" permission="admin:webmanage_btn">网站管理</div>
+            <div class="item pluginManageBtn" item="plugin_manage" permission="admin:pluginmanage_btn">插件管理</div>
         </div>
         <div class="content">
             <!-- 这里显示内容 -->
