--- a/Web/pages/admin/manage.html
+++ b/Web/pages/admin/manage.html
@@ -20,7 +20,7 @@
             <div class="item homeBtn">首页</div>
             <div class="item userInfoBtn active" item="user_info">个人信息</div>
             <div class="item personnelBtn" item="personnel" permission="admin:personnel_btn">人员管理</div>
-            <div class="item permissionBtn" item="permission">权限管理</div>
+            <div class="item permissionBtn" item="permission" permission="admin:permission_btn">权限管理</div>
             <div class="item postsBtn" item="posts_manage" permission="admin:posts_btn">帖子管理</div>
             <div class="item pushBtn" item="send_posts" permission="admin:push_btn">发布新帖</div>
             <div class="item webManageBtn" item="web_manage" permission="admin:webmanage_btn">网站管理</div>
