--- a/Web/pages/admin/personnel.html
+++ b/Web/pages/admin/personnel.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                    <button type="button" class="btn btn-primary userEditModalConfirm">确认修改</button>
+                    <button type="button" class="btn btn-primary confirm">确认修改</button>
                 </div>
             </div>
         </div>
