--- a/Web/pages/admin/manage.html
+++ b/Web/pages/admin/manage.html
@@ -14,7 +14,11 @@
     <div class="main">
         <div class="title">
             Kuoer's Blog 管理后台
-            <a href="javascript:cancel()" style="float: right; font-size: 16px">注销</a>
+            <div style="font-size: 14px">
+                你好!
+                <span class="userName" style="margin-right: 5px;">-</span>
+                <a href="javascript:cancel()">[注销]</a>
+            </div>
         </div>
         <div class="header">
             <div class="item homeBtn">首页</div>
