给插件系统添加shiro权限验证

--- a/Web/pages/admin/plugin_config.html
+++ b/Web/pages/admin/plugin_config.html
@@ -21,7 +21,8 @@
     $.ajax({
         url: api + 'plugin/getpluginconfigpage',
         data: {
-            name: getQueryVariable('name')
+            name: getQueryVariable('name'),
+            token
         },
         type: 'get',
         success: function(target) {
