--- a/一些插件示例/SiteMapPlugin/src/main/resources/config.html
+++ b/一些插件示例/SiteMapPlugin/src/main/resources/config.html
@@ -10,7 +10,7 @@
 
     <button onclick="saveConfig()">保存配置</button>
     <br>
-    <a href="#">网站地图预览</a>
+    <a href="#" target=_blank>网站地图预览</a>
 
     <script>
         let frontEndAddressInput = $('.frontEndAddressInput');
