--- a/一些插件示例/SiteMapPlugin/src/main/resources/config.html
+++ b/一些插件示例/SiteMapPlugin/src/main/resources/config.html
@@ -19,7 +19,8 @@
                 url: api + 'sitemap/saveConfig',
                 type: 'get',
                 data: {
-                    frontendaddress: frontEndAddressInput.val()
+                    frontendaddress: frontEndAddressInput.val(),
+                    token
                 },
                 success: function(target) {
                     if(target == 'yes') {
