--- a/一些插件示例/QQLogin/src/main/resources/config.html
+++ b/一些插件示例/QQLogin/src/main/resources/config.html
@@ -18,7 +18,8 @@
                 url: api + 'qqlogin/saveConfig',
                 type: 'get',
                 data: {
-                    frontendaddress: frontEndAddressInput.val()
+                    frontendaddress: frontEndAddressInput.val(),
+                    token
                 },
                 success: function(target) {
                     if(target == 'yes') {
