管理后台更新

--- a/Web/pages/admin/manage.html
+++ b/Web/pages/admin/manage.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="header">
-            <div class="item homeBtn">首页</div>
+            <div class="item homeBtn" item="home">首页</div>
             <div class="item userInfoBtn active" item="user_info">个人信息</div>
             <div class="item personnelBtn" item="personnel" permission="admin:personnel_btn">人员管理</div>
             <div class="item permissionBtn" item="permission" permission="admin:permission_btn">权限管理</div>
