--- a/Web/pages/admin/user_info.html
+++ b/Web/pages/admin/user_info.html
@@ -1,4 +1,13 @@
-欢迎你<span class="username"></span>
+<div class="panel panel-default">
+	<div class="panel-heading">
+		<h3 class="panel-title">
+			个人信息
+		</h3>
+	</div>
+	<div class="panel-body">
+		用户名：<span class="username"></span>
+	</div>
+</div>
 
 <script>
     $('.username').text(currUserInfo.name);
