--- a/Web/index.html
+++ b/Web/index.html
@@ -32,14 +32,14 @@
     </div>
 
     <div class="footer">
-        &lt;/&gt; Copyright &copy; Kuoer's Blog (<a data-toggle="tooltip" title="有问题联系 1275886165@qq.com" style="display: inline; color: black;" href="./pages/admin/index.html">KUOER.TOP</a>) <span id="createTime"></span>
+        &lt;/&gt; Copyright &copy; Kuoer's Blog (<a data-toggle="tooltip" title="有问题联系 1275886165@qq.com" style="display: inline; color: black;" href="./pages/admin/login.html">KUOER.TOP</a>) <span id="createTime"></span>
         <a id="filing" href="https://beian.miit.gov.cn/"></a>
     </div>
     
     <script src="./js/lib/jquery-3.6.0.min.js"></script>
     <script src="./js/lib/bootstrap.js"></script>
     <script src="./js/config.js"></script>
-    <script src="./js/index.js"></script>
+    <script src="./js/home.js"></script>
     
 </body>
 </html>
