--- a/Web/pages/admin/login.html
+++ b/Web/pages/admin/login.html
@@ -20,22 +20,10 @@
             <input id="password" type="password" placeholder="密码">
         </div>
 
-        <a href="#" class="btn loginBtn">
-            登录
-        </a>
+        <a href="#" class="btn loginBtn">登录</a>
     </div>
     <script src="../../js/lib/jquery-3.6.0.min.js"></script>
     <script src="../../js/config.js"></script>
     <script src="../../js/login.js"></script>
-
-	<script>
-		var _hmt = _hmt || [];
-		(function() {
-			var hm = document.createElement("script");
-			hm.src = "https://hm.baidu.com/hm.js?c2f8b1633781ce4b08b386e0f7d8103e";
-			var s = document.getElementsByTagName("script")[0]; 
-			s.parentNode.insertBefore(hm, s);
-		})();
-	</script>
 </body>
 </html>
