--- a/Web/pages/friend_chain.html
+++ b/Web/pages/friend_chain.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="footer">
-        &lt;/&gt; Copyright &copy; Kuoer's Blog (<a data-toggle="tooltip" title="有问题联系 1275886165@qq.com" style="display: inline; color: black;" href="./admin/index.html">KUOER.TOP</a>) <span id="createTime"></span>
+        &lt;/&gt; Copyright &copy; Kuoer's Blog (<a data-toggle="tooltip" title="有问题联系 1275886165@qq.com" style="display: inline; color: black;" href="./admin/login.html">KUOER.TOP</a>) <span id="createTime"></span>
         <a id="filing" href="https://beian.miit.gov.cn/"></a>
     </div>
     
