--- a/Web/pages/admin/manage.html
+++ b/Web/pages/admin/manage.html
@@ -22,13 +22,12 @@
         </div>
         <div class="header">
             <div class="item homeBtn" item="home">首页</div>
-            <div class="item userInfoBtn active" item="user_info">个人信息</div>
-            <div class="item personnelBtn" item="personnel" permission="admin:personnel_btn">人员管理</div>
-            <div class="item permissionBtn" item="permission" permission="admin:permission_btn">权限管理</div>
-            <div class="item postsBtn" item="posts_manage" permission="admin:posts_btn">帖子管理</div>
-            <div class="item pushBtn" item="send_posts" permission="admin:push_btn">发布新帖</div>
-            <div class="item webManageBtn" item="web_manage" permission="admin:webmanage_btn">网站管理</div>
-            <div class="item pluginManageBtn" item="plugin_manage" permission="admin:pluginmanage_btn">插件管理</div>
+            <div class="item active" item="user_info">个人信息</div>
+            <div class="item" item="personnel" permission="admin:personnel_btn">人员管理</div>
+            <div class="item" item="permission" permission="admin:permission_btn">权限管理</div>
+            <div class="item" item="posts_manage" permission="admin:posts_btn">帖子管理</div>
+            <div class="item" item="web_manage" permission="admin:webmanage_btn">网站管理</div>
+            <div class="item" item="plugin_manage" permission="admin:pluginmanage_btn">插件管理</div>
         </div>
         <div class="content">
             <!-- 这里显示内容 -->
@@ -39,15 +38,5 @@
     <script src="../../js/config.js" ></script>
     <script src="../../js/lib/bootstrap.js"></script>
     <script src="../../js/manage.js"></script>
-
-    <script>
-        var _hmt = _hmt || [];
-        (function() {
-            var hm = document.createElement("script");
-            hm.src = "https://hm.baidu.com/hm.js?c2f8b1633781ce4b08b386e0f7d8103e";
-            var s = document.getElementsByTagName("script")[0]; 
-            s.parentNode.insertBefore(hm, s);
-        })();
-    </script>
 </body>
 </html>
