--- a/Web/pages/admin/edit_posts.html
+++ b/Web/pages/admin/edit_posts.html
@@ -9,8 +9,8 @@
                 <input type="text" class="form-control" id="title" placeholder="帖子标题">
             </div>
             <div class="buttonFrame">
-                <button class="btn editBtn">修改</button>
-                <button class="btn removeBtn">删除</button>
+                <button class="btn editBtn" style="min-width: 100px;">修改</button>
+                <button class="btn removeBtn" style="min-width: 60px;">删除</button>
             </div>
         </div>
         <div class="labelFrame">
