--- a/Web/pages/label.html
+++ b/Web/pages/label.html
@@ -9,7 +9,13 @@
     <link rel="icon" type="image/svg+xml" href="../images/favicon.ico"/>
     <link rel="stylesheet" href="../css/lib/bootstrap.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/label.css">
+    <style>
+        .main .content > .title {
+            margin: 30px 0 0 0;
+            font-size: 4rem;
+            font-weight: 600;
+        }
+    </style>
 </head>
 <body>
     <div class="main">
